# DevOS

./: .gitmodules  configure_autostart.sh
.github/workflows/: build-iso-testing.yml  build-iso.yml
archiso/: packages.x86_64  pacman.conf  profiledef.sh
archiso/.github/workflows/: build-iso.yml
archiso/efiboot/loader/: loader.conf
archiso/syslinux/: syslinux.cfg
d-env/: go.mod  go.sum  main.go
d-env/modules/: module.go
d-env/modules/dependencies/: dependencies.go
d-env/modules/docker/: docker.go
d-env/modules/git/: git.go
d-env/modules/ml/: ml.go
d-env/modules/project/: project.go
d-env/modules/security/: security.go
d-recon/: d-recon.go  go.mod  launch.json
d-recon/cmd/d-recon/: main.go
d-recon/d-recon_reports/: example.com_report.json  kinopoisk.ru_report.json  scanme.nmap.org_20250929_171217.html
d-recon/internal/config/: config.go
d-recon/internal/core/: types.go
d-recon/internal/utils/: logger.go
d-recon/pkg/orchestrator/: orchestrator.go
d-recon/pkg/reporting/: reporter.go
d-recon/results/: example.com_subdomains.txt  google.com_subdomains.txt  stackoverflow.com_subdomains.txt  yandex.ru_subdomains.txt
d-recon/results/reports/: yandex.ru_report.html  yandex.ru_report.json  yandex.ru_report.md
d-recon/web/: server.go
d-recon/web/templates/: index.html  scan.html
d-shark/: Cargo.toml
d-shark/src/: main.rs
d-shark/src/capture/: mod.rs  packet_capture.rs
d-shark/src/firewall/: manager.rs  mod.rs
d-shark/src/geoip/: locator.rs
d-shark/src/ui/: mod.rs  tui.rs
repo/: devos-tools-core-0.1.0-1-any.pkg.tar.zst
(+15 files in other folders)
