[package]
name = "d-shark"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
crossterm = "0.27"
ratatui = "0.23"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.48"